# QuantumSimulator

./: .gitignore  Cargo.toml  LICENSE  README.md  test.qasm
LaTeX/: QuantumSimulator.bib  QuantumSimulator.tex
sample/: qft.qasm  rbn.qasm  ripplecarry.qasm  teleport.qasm
src/: check.rs  cli.rs  eval.rs  gatewriter.rs  main.rs  register.rs
