[package]
name = "quantum_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray_einsum_beta = "0.7.0"
num = "0.4.0"
openqasm = {version = "0.1.2", features = ["pretty", "ariadne"]}
approx = "0.5.1"
