[package]
name = "quantum_simulator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray_einsum_beta = "0.7.0"
ndarray-numtest = "0.2.0"
num = "0.4.0"
# openqasm = {version = "0.1.3", features = ["pretty", "ariadne"]}
approx = "0.5.1"
simple-error = "0.2.3"
clap = { version = "4.0.29", features = ["derive"]}

[dependencies.openqasm]
git = "https://github.com/tuomas56/openqasm-rs.git"
branch = "main"
features = ["pretty", "ariadne"]
